fix overflow

--- a/EcoNet/css/small.sass
+++ b/EcoNet/css/small.sass
@@ -12,10 +12,13 @@ $rouge: #c84040
 
 body
     margin: auto
-    font-family: 'Montserrat', sans-serif
+
+div#wrapper
     position: relative
-    height: 100vh
+    font-family: 'Montserrat', sans-serif
     padding-top: 110px
+    height: 100vh
+    width: 100vw
 
 // menu déplié sous mobile
 div.nav-mob
