--- a/EcoNet/css/style.css
+++ b/EcoNet/css/style.css
@@ -6,10 +6,14 @@
 @import url(font-awesome-4.6.3/css/font-awesome.min.css);
 body {
 	margin: auto;
-	font-family: 'Montserrat', sans-serif;
+}
+
+div#wrapper {
 	position: relative;
-	height: 100vh;
+	font-family: 'Montserrat', sans-serif;
 	padding-top: 110px;
+	height: 100vh;
+	width: 100vw;
 }
 
 /* menu déplié sous mobile */
